samples/_failures_safe/1761508046_5cea83_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_240d92c7.c: In function ‘main’:
./samples/SAFE/__tmp_240d92c7.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
